--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -68,8 +68,6 @@
 }
 
 .navigation-burger-open li {
-  font-size: 150px;
-  font-family: "PPMondwest-Regular";
   text-transform: uppercase;
   line-height: 130px;
   animation: fadeIn 5s;
@@ -77,8 +75,24 @@
 
 .navigation-open-house img {
   padding-bottom: 20px;
-  z-index: -1000;
+  cursor: pointer;
 }
 
-.navigation-burger-open ul {
+.navigation-element {
+  color: black;
+  font-size: 150px;
+  font-family: "PPMondwest-Regular";
+}
+
+.navigation-element:hover {
+  color: blue;
+}
+
+.navigation-element::after {
+  content: "/";
+  display: none;
+}
+
+.navigation-element:hover::after {
+  display: inline;
 }
